syntax = "proto3";

package appointment_data_proxy.practice;

option csharp_namespace = "AppointmentService.AppointmentDataProxy.GrpcService.Protos";

import "Protos/common.proto";

message Practice {
  string institution_code = 1;
  string name = 2;
}

message PracticeFilter {
  optional appointment_data_proxy.common.StringFilter institution_code = 1;
  optional appointment_data_proxy.common.StringFilter name = 2;
}

message GetPracticeRequest {
  optional string institution_code = 1;
}

message StreamPracticesRequest { optional PracticeFilter filter = 1; }

message CreatePracticeRequest { Practice practice = 1; }
message UpdatePracticeRequest { Practice practice = 1; }
message DeletePracticeRequest { string institution_code = 1; }

message GetPracticeResponse { Practice practice = 1; }

message CreatePracticeResponse {}
message UpdatePracticeResponse {}
message DeletePracticeResponse {}

service PracticeService {
  rpc Get(GetPracticeRequest) returns (GetPracticeResponse);
  rpc Stream(StreamPracticesRequest) returns (stream Practice);

  rpc Create(CreatePracticeRequest) returns (CreatePracticeResponse);
  rpc Update(UpdatePracticeRequest) returns (UpdatePracticeResponse);
  rpc Delete(DeletePracticeRequest) returns (DeletePracticeResponse);
}